src/app/_shared/telephone-audit-trail/telephone-audit-trail.component.css
table
{    width:100%;
}
th {
  background-color: #e60000;
  color:white;
}

.mat-header-cell {
  color: white;
  /* width: auto;
  height: fit-content; */
  font-size:small; 
}

.mat-header-row{
  height: 30px;
}

.mat-cell{
  font-size:small;
}

.mat-row {
  height: 10px;
}


tr.example-detail-row {
  height: 0;
}

/* tr.example-element-row:not(.example-expanded-row):hover {
  background: whitesmoke;
}

tr.example-element-row:not(.example-expanded-row):active {
  background: #efefef;
} */

.example-element-row td {
  border-bottom-width: 0;
}

.example-element-detail, .liverecord-sec {
  overflow: hidden;
  /* display: flex; */
}

.example-element-diagram, .liverecord-sec {
  min-width: 80px;
  border: 2px solid grey;
  padding: 8px;
  /* font-weight: lighter; */
  margin: 8px 0;
  height: 100%;
}

.example-element-symbol {
  font-weight: bold;
  font-size: 40px;
  line-height: normal;
}

.example-element-description {
  padding: 16px;
}

.example-element-description-attribution {
  opacity: 0.5;
}

/* th, .appTable::ng-deep  th {
  font-weight: bold;
  background-color: #e60000;
  color: black;
} */

.notification-sec .page-header {
  font-weight: bold;
  background-color: #e60000;
  color:  white;
  justify-content: center;
}

.liveRecord-error {
  text-align: center;
  /* color: red; */
}

.error {
  color: red;
}

h4 {
  font-weight: bold;
  font-size: small;
}

.container-fluid {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  column-gap: 50px;
}

.fluid-item {
  flex: 0 1 1;
  min-width: 500px;
}

/* .notification-sec .container-fluid{
  justify-content: flex-start;
  column-gap: 300px;
} */

.mat-expansion-panel-header.mat-expansion-toggle-indicator-before {
  /* flex-direction: row-reverse; */
  height: 32px;
  font-size: small;
}

/* @media screen and (min-width: 1028px) {
  .fluid-item{
    flex: 47% 1 1;
  }
}

@media screen and (max-width: 1027px) {
  .fluid-item{
    flex: 95% 1 1;
  }
} */

.table-icon{
  cursor: pointer;
  font-size: 18px;
  height: 0px;
  /* width:auto; */
  color: #e60000;
  }

  mat-panel-title {
    font-size: small;
    font-weight: 500;
    color: rgba(0, 0, 0, 1);
  }

  .label {
    display: inline-block;
    /* font-size: small; */
    font: 500 14px/20px Roboto, "Helvetica Neue";
    color: rgba(0, 0, 0, 1);
    /* font-weight: 500; */
    min-width: 150px;
  }
  
  .text-display {
    font: 400 14px/20px Roboto, "Helvetica Neue";
    color: rgba(0, 0, 0, 1);
    /* font-weight: 400; */
  }

  .notification-sec .label {
    min-width: 120px;
  }

